--- a/blog/templates/blog/user_profile.html
+++ b/blog/templates/blog/user_profile.html
@@ -32,7 +32,7 @@
         <div class="position-absolute top-0 end-0 d-md-none">
           {% if request.user.username == search_user.username %}
             <div class="d-flex flex-column align-items-center">
-              <a class="text-dark" href="{% url 'profile-update' search_user.profile.pk %}" method="GET">
+              <a class="text-dark" href="{% url 'profile-update' search_user.profile.pk %}">
                 <i class="bi bi-gear-fill font-lg text-dark"></i>
               </a>
               <span id="edit-profile-text" class="font-xssss">Edit Profile</span>
@@ -94,14 +94,14 @@
             {% endif %}
             <div class="d-none d-md-flex flex-md-column align-items-md-center">
               {% if request.user.username == search_user.username %}
-                <a class="text-dark" href="{% url 'profile-update' profile.pk %}" method="GET">
+                <a class="text-dark" href="{% url 'profile-update' profile.pk %}">
                   <i class="bi bi-gear-fill font-lg text-dark"></i>
                 </a>
                 <span id="edit-profile-text" class="font-xssss">Edit Profile</span>
               {% else %}
               <form action="{% url 'follow-unfollow' profile.id %}" method="POST">
                 {% csrf_token %}
-                <button class="btn d-flex align-items-center py-1 px-2 bg-greylight rounded" type="submit">
+                <button class="btn d-flex align-items-center py-1 px-2 bg-greylight bg-hover-grey rounded" type="submit">
                   {% if is_follower %}
                     Following
                     <i class="bi bi-check-lg font-sm"></i>
@@ -228,22 +228,13 @@
               <div class="card-body d-flex p-0">
                 <a href="{% url 'post-like' post.pk%}" class="d-flex align-items-center fw-600 
                   text-grey-900 lh-26 font-xssss me-2">
-                  {% if post.id in liked %}
-                    <i class="bi bi-heart-fill color-red me-1 btn-round-sm font-lg"></i> 
-                  {% else %}
-                    <i class="bi bi-heart text-black me-1 btn-round-sm font-lg"></i> 
-                  {% endif%}
+                    <i class="{% if post.id in liked %} bi bi-heart-fill color-red {% else %} bi bi-heart text-black {% endif%} text-start btn-round-sm font-lg"></i>
                   {{ post.likes_count }} Like
                 </a>
                 <a href="{% url 'comments' post.id %}" class="d-flex align-items-center fw-600 
                   text-grey-900 lh-26 font-xssss">
                   <i class="bi bi-chat text-dark text-grey-900 btn-round-sm font-lg"></i>
                   <span>{{ post.comments_count }} Comments</span>
-                </a>
-                <a href="#" class="ms-auto d-flex align-items-center 
-                  fw-600 text-grey-900 lh-26 font-xssss">
-                  <i class="bi bi-share text-grey-900 text-dark btn-round-sm font-lg"></i>
-                  <span>Share</span>
                 </a>
               </div>
             </div>
