--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -187,15 +187,16 @@
           </div>
         {% endif %}
         <nav aria-label="">
-          <ul class="pagination justify-content-center">
-            <li class="page-item"><a class="page-link" href="?page=1">&laquo; first</a></li>
+          <ul class="pagination justify-content-center align-items-center">
             {% if posts.has_previous %}
-                <li class="page-item"><a class="page-link" href="?page={{ posts.previous_page_number }}">previous</a></li>
+              <li class="page-item"><a class="page-link" href="?page=1">First</a></li>
+              <li class="page-item"><a class="page-link" href="?page={{ posts.previous_page_number }}">{{ posts.previous_page_number }}</a></li>
             {% endif %}
+            <span class="page-link text-dark">Page {{posts.number}} of {{posts.paginator.num_pages}}</span>
             {% if posts.has_next %}
-                <li class="page-item"><a class="page-link" href="?page={{ posts.next_page_number }}">next</a></li>
+              <li class="page-item"><a class="page-link" href="?page={{ posts.next_page_number }}">{{ posts.next_page_number }}</a></li>
+              <li class="page-item"><a class="page-link" href="?page={{ posts.paginator.num_pages }}">Last</a></li>
             {% endif %}
-            <li class="page-item"><a class="page-link" href="?page={{ posts.paginator.num_pages }}">last &raquo;</a></li>
           </ul>
         </nav>
     </div>
