--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,7 +8,7 @@ FaceBlog log in or sign up
     display: none;
   }
 </style>
-<div class="container d-flex flex-column justify-content-center align-items-center min-vh-100">
+<div class="container d-flex flex-column justify-content-center align-items-center vh-100">
   <div class="col-12 col-sm-10 col-md-8 col-lg-6" style="max-width:500px;">
     <div class="card justify-content-center p-5 shadow-lg border-0 rounded">
       <div class="text-center mb-4">
