--- a/blog/templates/blog/profile_update.html
+++ b/blog/templates/blog/profile_update.html
@@ -120,7 +120,7 @@
           <a class="btn btn-outline-danger" href="{% url 'user-profile' request.user %}">Cancel</a>       
         </div>
         <div class="my-1">
-          <a href="{% url 'password_reset' %}" class="btn p-1 text-primary border-0"">Reset Password</a>
+          <a href="{% url 'password_reset' %}" class="btn p-1 text-primary border-0">Reset Password</a>
           <a data-bs-toggle="modal"
             data-bs-target="#deleteModal"
             class="btn p-1 text-danger border-0"
